@@ -2,6 +2,6 @@
 
 * Refactor Dataset and descendants for DRY. Methods like count, select etc. should be defined in Sequel::Dataset.
 
-* Wrap native database exceptions in Sequel::Exception.
+* Wrap native database exceptions in Sequel::Error.
 
 * Rename Dataset's record_class attributes to model_class.
