@@ -1,3 +1,7 @@
+*SVN*
+
+* Added support for DISTINCT and OFFSET clauses (patches by Alex Bradbury.) Dataset#limit now accepts ranges. Added Dataset#uniq and distinct methods.
+
 *0.0.16*
 
 * More documentation.
